# hopper-bacco

./: .env.example  Dockerfile  README.md  docker-compose-testing.yaml  docker-compose.yaml  pyproject.toml  setup.py
hopper-bacco/: entrypoint.sh  main.py
hopper-bacco/routes/: api_router.py
hopper-bacco/routes/hopper/: hopper_controller.py  hopper_service.py
hopper-bacco/routes/hopper/dto/: hopper_model.py
hopper-bacco/routes/services/: ip_rotator_service.py  user_agent_rotator_service.py  user_agent_service.py
hopper-bacco/shared/middlewares/: exception_handler_middleware.py  list_string_flattening_middleware.py
hopper-bacco/shared/models/: orm_base_model.py  status_message.py
hopper-bacco/shared/models/settings/: environment.py  log_level.py  settings.py
hopper-bacco/shared/utilities/: configurator.py  utilities.py
tests/: conftest.py  test_basic.py  test_envs.py  test_routes.py
